Changed style folder structure.

--- a/styles/style.less
+++ b/styles/style.less
@@ -1,113 +1,3 @@
-// @dark-mode: false;
-@dark-mode: true;
-
-// Please visit the URL below for more information:
-//    https://shd101wyy.github.io/markdown-preview-enhanced/#/customize-css
-
-
-// @import //  mermaid.css", "mermaid.dark.css
-// "markdown-preview-enhanced.mermaidTheme": "dark"
-
-
-/*#region RegionName */
-/*#endregion RegionName */
-
-// @import "C:\Users\bphommathep.TOTALMM\OneDrive - TMM, Inc\Repository\Files\Markdown\files\Custom\custom.less";
-
-
-
-/*#region Theme */
-    // @font-face {
-    //     font-family: Roboto Mono;
-    //     src: url("https://fonts.googleapis.com/css?family=Roboto+Mono|Source+Sans+Pro:300,400,600");
-    // }
-
-    @font-face {
-        font-family: Roboto;
-        src: url("https://fonts.googleapis.com/css?family=Roboto");
-    }
-
-    @general-font-size: 0.85rem;
-    @toc-left-padding-half: 457px;
-    @toc-expanded-width: 400px;
-
-    @toc-transition-in-time: 0.5s;
-    @toc-transition-out-time: 0.5s;
-    @body-transition-in-time: 0.65s;
-    @body-transition-out-time: @toc-transition-out-time;
-
-    @background-body:    if(@dark-mode = true, #161616, #F5F5F5);
-    @background-general: if(@dark-mode = true, #292929, #FFFFFF);
-    @general-font-color: if(@dark-mode = true, #D4D4D4, #2F3337);
-    @header-font-color:  if(@dark-mode = true, #EDEDED, #1F2224);
-    @divider-color:      if(@dark-mode = true, #474747, #B9B9B9);
-    @border-color:       if(@dark-mode = true, #696969, #9B9B9B);
-    @link-hover-color:   if(@dark-mode = true, #40E0D0, #40E0D0);  
-
-    // @h1-font-size: calc(@general-font-size + 1.00rem);
-    // @h2-font-size: calc(@h1-font-size - 0.30rem);
-    // @h3-font-size: calc(@h2-font-size - 0.25rem);
-    // @h4-font-size: calc(@h3-font-size - 0.15rem);
-    // @h5-font-size: calc(@h4-font-size - 0.10rem);
-    // @h6-font-size: calc(@h5-font-size - 0.10rem);
-
-    @h1-font-size: calc(@general-font-size + 1.00rem);
-    @h2-font-size: calc(@general-font-size + 0.70rem);
-    @h3-font-size: calc(@general-font-size + 0.45rem);
-    @h4-font-size: calc(@general-font-size + 0.35rem);
-    @h5-font-size: calc(@general-font-size + 0.20rem);
-    @h6-font-size: calc(@general-font-size + 0.10rem);
-
-    @h1-color: @header-font-color;
-    @h2-color: if(@dark-mode = true, darken(@header-font-color, 10%), lighten(@header-font-color, 10%));
-    @h3-color: if(@dark-mode = true, darken(@header-font-color, 20%), lighten(@header-font-color, 20%));
-    @h4-color: if(@dark-mode = true, darken(@header-font-color, 30%), lighten(@header-font-color, 30%));
-    @h5-color: if(@dark-mode = true, darken(@header-font-color, 40%), lighten(@header-font-color, 40%));
-    @h6-color: if(@dark-mode = true, darken(@header-font-color, 45%), lighten(@header-font-color, 45%));
-
-
-/*#region Code Block Palette */
-    @code-border-color:     if(@dark-mode = true, #3F3E3E, #9B9B9B);
-    @code-text-color:       if(@dark-mode = true, #D1D1D1, #424242);
-    @code-top-size:         .8rem;
-    // @code-header-size:      calc(@code-top-size * 2.5);
-    // @code-header-size:      calc(.8rem * 2.5);
-
-    @code-highlight-color:  if(@dark-mode = true, 
-            linear-gradient(to right, hsla(0 , 0%, 95%, 0.15) 50%, hsla(0 , 0%, 95%, 0)),
-            linear-gradient(to right, hsla(24, 7%, 14%, 0.15) 50%, hsla(24, 7%, 14%, 0))
-        );
-    
-    //  TOKENS
-    @token-property:        if(@dark-mode = true, #9CDCFE, #4577A3);
-    @token-keyword:         if(@dark-mode = true, #5190C5, #4577A3);
-    @token-comment:         if(@dark-mode = true, #6A9955, #417C37);
-    // @token-comment:     if(@dark-mode = true, #57A64A, #417C37);
-    @token-string:          if(@dark-mode = true, #CE9178, #919053);
-    @token-number:          if(@dark-mode = true, #B8D7A3, #7A8F6C);
-    @token-punctuation:     if(@dark-mode = true, #BDBDBD, #030303);
-    @token-selector:        if(@dark-mode = true, #D7BA7D, #887243);
-    @token-boolean:         @token-keyword;
-    @token-class:           @token-keyword;
-
-    
-
-    @code-button-color: transparent;
-    @svg-fill: if(@dark-mode = true, white, black);
-
-    @code-expandless-icon: 'https://fonts.gstatic.com/s/i/materialicons/expand_less/v10/24px.svg';
-    @code-expandmore-icon: 'https://fonts.gstatic.com/s/i/materialicons/expand_more/v12/24px.svg';
-
-
-
-
-
-/*#endregion Code Block Palette */
-
-
-/*#endregion Theme */
-
-
 html, body {
     background-color: @background-general !important;
     overflow-x: hidden;
@@ -832,7 +722,7 @@ html body[for="html-export"]:not([data-presentation-mode]) {
         mask: url(@code-expandmore-icon) no-repeat 0% 0%;
         -webkit-mask-size: cover;
         mask-size: cover;
-        background-color: @svg-fill;
+        background-color: @general-font-color;
         transition-duration: 0.35s;
         transition-timing-function: ease-out;
     }
