--- a/styles/dark.less
+++ b/styles/dark.less
@@ -790,8 +790,8 @@ html body[for="html-export"]:not([data-presentation-mode]) {
         display: block;
         left: 0px;
         content: '';
-        -webkit-mask: url(@code-expandmore-icon) no-repeat 0% 0%;
-        mask: url(@code-expandmore-icon) no-repeat 0% 0%;
+        -webkit-mask: url(@code-expand-icon) no-repeat 0% 0%;
+        mask: url(@code-expand-icon) no-repeat 0% 0%;
         -webkit-mask-size: cover;
         mask-size: cover;
         background-color: @general-font-color;
