--- a/styles/dark.less
+++ b/styles/dark.less
@@ -6,6 +6,8 @@
 @border-color:       #696969;
 @link-hover-color:   #40E0D0;
 
+
+
 /*#region Code Block Palette */
 @code-border-color:     #3F3E3E;
 @code-text-color:       #D1D1D1;
@@ -47,6 +49,13 @@
     @general-font-size: 0.85rem;
     @toc-left-padding-half: 457px;
     @toc-expanded-width: 400px;
+
+    @toc-background: linear-gradient(to top,
+        rgba(red(@background-body), green(@background-body), blue(@background-body), 1) 0%,
+        rgba(red(@background-body) / 2, green(@background-body) / 2, blue(@background-body) / 2, 0.68) 10%,
+        rgba(red(@background-body) / 3, green(@background-body) / 3, blue(@background-body) / 3, 0.23) 50%, 
+        transparent
+    ) bottom darken(@background-general, 5%) no-repeat;
 
     @toc-transition-in-time: 0.5s;
     @toc-transition-out-time: 0.5s;
@@ -240,6 +249,22 @@ html, body {
             animation: hide-scroll 0.5s backwards;
             @keyframes hide-scroll {
                 from, to { overflow: hidden; } 
+            }
+
+            &::-webkit-scrollbar-thumb {
+                border-radius: 5px;
+                background-color: rgba(150,150,150,0.66);
+                border: 4px solid rgba(150,150,150,0.66);
+                background-clip: content-box;
+            }
+
+            &::-webkit-scrollbar-track {
+                border-radius: 10px;
+                background-color: transparent;
+            }
+
+            &::-webkit-scrollbar {
+                width: 8px;
             }
         }
 
