Added C# attribute styles

--- a/styles/dark.less
+++ b/styles/dark.less
@@ -26,7 +26,14 @@
 @token-punctuation:     #BDBDBD;
 @token-selector:        #D7BA7D;
 @token-boolean:         @token-keyword;
-@token-class:           @token-keyword;
+// @token-class:           @token-keyword;
+// @token-class:           #4EC9B0;
+@token-class:           #36B58A;
+
+@token-attrname:       @token-keyword;
+@token-attrvalue:      @token-property;
+
+
 
 // @code-expandless-icon: 'https://fonts.gstatic.com/s/i/materialicons/expand_less/v10/24px.svg';
 @code-expand-icon: 'https://fonts.gstatic.com/s/i/materialicons/expand_more/v12/24px.svg';
@@ -442,10 +449,16 @@ html, body {
             color: @token-string;
         }
 
+        
 
-        // &.class-name {
-        //     color: @token-class;
-        // }
+
+        &.class-name {
+            color: @token-class;
+        }
+        
+        &.generic.class-name {
+            color: #B8D7A3
+        }
 
         &.property-access{
             // color: @token-string;
@@ -499,6 +512,15 @@ html, body {
         //   color: @token-keyword;
         // }
 
+
+        &.attr-name {
+            color: @token-attrname;
+        }
+
+        &.attr-value {
+            color: @token-attrvalue;
+        }
+        
      
 
     }
