Updated C# attr name color

--- a/styles/dark.less
+++ b/styles/dark.less
@@ -33,7 +33,7 @@
 @token-method:          #D3FA7E;
 @token-function:        #D3FA7E;
 
-@token-attrname:       @token-keyword;
+@token-attrname:       #C8C8C8;
 @token-attrvalue:      @token-property;
 
 
