--- a/styles/light.less
+++ b/styles/light.less
@@ -30,7 +30,7 @@
 @token-method:          #D3FA7E;
 @token-function:        #D3FA7E;
 
-@token-attrname:       @token-keyword;
+@token-attrname:       #C8C8C8;
 @token-attrvalue:      @token-property;
 
 // @code-expandless-icon: 'https://fonts.gstatic.com/s/i/materialicons/expand_less/v10/24px.svg';
