--- a/styles/dark.less
+++ b/styles/dark.less
@@ -59,13 +59,14 @@
     @general-font-size: 0.85rem;
     @toc-left-padding-half: 457px;
     @toc-expanded-width: 400px;
-
+    
     @toc-background: linear-gradient(to top,
         rgba(red(@background-body), green(@background-body), blue(@background-body), 1) 0%,
         rgba(red(@background-body) / 2, green(@background-body) / 2, blue(@background-body) / 2, 0.68) 10%,
         rgba(red(@background-body) / 3, green(@background-body) / 3, blue(@background-body) / 3, 0.23) 50%, 
         transparent
     ) bottom darken(@background-general, 5%) no-repeat;
+
 
     @toc-transition-in-time: 0.5s;
     @toc-transition-out-time: 0.5s;
@@ -80,11 +81,11 @@
     @h6-font-size: calc(@general-font-size + 0.10rem);
 
     @h1-color: @header-font-color;
-    @h2-color: darken(@header-font-color, 10%);
-    @h3-color: darken(@header-font-color, 20%);
-    @h4-color: darken(@header-font-color, 30%);
-    @h5-color: darken(@header-font-color, 40%);
-    @h6-color: darken(@header-font-color, 45%);
+    @h2-color: lighten(@header-font-color, 10%);
+    @h3-color: lighten(@header-font-color, 20%);
+    @h4-color: lighten(@header-font-color, 30%);
+    @h5-color: lighten(@header-font-color, 40%);
+    @h6-color: lighten(@header-font-color, 45%);
 
 /*#endregion Theme */
 
@@ -213,13 +214,14 @@ html, body {
 
     /*#region Code Tags */
 
+
+
     pre {
         font-size: @general-font-size !important;
         background-color: @background-body;
         color: @general-font-color;
         position: relative;
         // border: thin solid @code-border-color;
-
         max-height: 500px;
         // overflow-y: auto;
         overflow-y: auto;
@@ -233,6 +235,7 @@ html, body {
         // transition: overflow-y 1s 0.5s;
 
         
+      
 
         &[code-collapsed=true] {
             max-height: calc(@code-top-size * 2.5);
@@ -266,7 +269,6 @@ html, body {
                 background-color: rgba(119, 118, 118, 0.493);
                 border: 4px solid rgba(119, 118, 118, 0.493);
                 background-clip: content-box;
-                
 
                 &:hover {
                     background-color: rgba(150,150,150,0.66);
@@ -402,9 +404,249 @@ html, body {
         letter-spacing: 0px;
     }
 
-    .token {
-        background-color: transparent;
 
+    &[class="language-csharp"] {
+            
+// &.class-name > .keyword {
+        //     color: #46AF99;
+        // }
+
+        // .token {
+        //     tab-size: 1 !important;
+        // }
+
+        //  &.arrow {
+
+        //}
+
+        &.keyword {
+            color: @token-keyword;
+        }
+
+        &.comment, &.prolog, &.doctype, &.cdata {
+            color: @token-comment;
+            font-style: italic;
+        }
+
+        &.string {
+            color: @token-string;
+        }
+
+        &.number {
+            color: @token-number;
+        }
+
+        &.unit {
+            color: @token-number;
+        }
+
+
+        &.operator {
+            color: #B2B2B2;
+            // background-color: transparent;
+        }
+
+        &.punctuation {
+            color: @token-punctuation;
+        }
+
+        &.color {
+            color: @token-string;
+        }
+
+
+        &.class-name {
+            color: @token-class;
+        }
+        
+        &.generic.class-name {
+            color: #B8D7A3
+        }
+
+        &.property-access{
+            // color: @token-string;
+            color: @token-property;
+        }
+
+        &.method, &.function {
+            // @token-method: #DD4A68;
+            // color: @token-method;
+            color: #D3FA7E;
+        }
+        
+
+        // &.function {
+        //     color: #46AF99;
+        // }
+
+        // &.variable {
+        //     color: #4EC9B0;
+        // }
+
+
+        //  &.keyword, 
+        // &.control-flow {
+        //     @token-controlflow: #DD4A68;
+        //     color: @token-controlflow;
+        // }
+
+
+
+        // &.dom {
+        //     @token-dom: #e90;
+        //     color: @token-dom;
+        // }
+
+     
+        &.property {
+            color: @token-property;
+        }
+
+        &.selector {
+            color: @token-selector;
+        }
+
+        &.boolean {
+            color: @token-boolean;
+        }
+
+
+        &.attr-name {
+            color: @token-attrname;
+        }
+
+        &.attr-value {
+            color: @token-attrvalue;
+        }
+
+
+        // &.url {
+        //   color: @token-keyword;
+        // }
+
+    }
+
+    &[class="language-javascript"] {
+        
+// &.class-name > .keyword {
+        //     color: #46AF99;
+        // }
+
+        // .token {
+        //     tab-size: 1 !important;
+        // }
+
+        //  &.arrow {
+
+        //}
+
+        &.keyword {
+            color: @token-keyword;
+        }
+
+        &.comment, &.prolog, &.doctype, &.cdata {
+            color: @token-comment;
+            font-style: italic;
+        }
+
+        &.string {
+            color: @token-string;
+        }
+
+        &.number {
+            color: @token-number;
+        }
+
+        &.unit {
+            color: @token-number;
+        }
+
+
+        &.operator {
+            color: #B2B2B2;
+            // background-color: transparent;
+        }
+
+        &.punctuation {
+            color: @token-punctuation;
+        }
+
+        &.color {
+            color: @token-string;
+        }
+
+
+        &.class-name {
+            color: @token-class;
+        }
+        
+        &.generic.class-name {
+            color: #B8D7A3
+        }
+
+        &.property-access{
+            // color: @token-string;
+            color: @token-property;
+        }
+
+        &.method, &.function {
+            // @token-method: #DD4A68;
+            // color: @token-method;
+            color: #D3FA7E;
+        }
+        
+
+        // &.function {
+        //     color: #46AF99;
+        // }
+
+        // &.variable {
+        //     color: #4EC9B0;
+        // }
+
+
+        //  &.keyword, 
+        // &.control-flow {
+        //     @token-controlflow: #DD4A68;
+        //     color: @token-controlflow;
+        // }
+
+
+
+        // &.dom {
+        //     @token-dom: #e90;
+        //     color: @token-dom;
+        // }
+
+     
+        &.property {
+            color: @token-property;
+        }
+
+        &.selector {
+            color: @token-selector;
+        }
+
+        &.boolean {
+            color: @token-boolean;
+        }
+
+
+        &.attr-name {
+            color: @token-attrname;
+        }
+
+        &.attr-value {
+            color: @token-attrvalue;
+        }
+
+
+        // &.url {
+        //   color: @token-keyword;
+        // }
+    }
+
+    &[class="language-sql"] {
         // &.class-name > .keyword {
         //     color: #46AF99;
         // }
@@ -466,7 +708,6 @@ html, body {
             color: @token-property;
         }
 
-
         &.method, &.function {
             // @token-method: #DD4A68;
             // color: @token-method;
@@ -510,11 +751,6 @@ html, body {
         }
 
 
-        // &.url {
-        //   color: @token-keyword;
-        // }
-
-
         &.attr-name {
             color: @token-attrname;
         }
@@ -522,7 +758,135 @@ html, body {
         &.attr-value {
             color: @token-attrvalue;
         }
+
+
+        // &.url {
+        //   color: @token-keyword;
+        // }
+
+    }
+
+    
+    .token {
+        background-color: transparent;
+
+        // // &.class-name > .keyword {
+        // //     color: #46AF99;
+        // // }
+
+        // // .token {
+        // //     tab-size: 1 !important;
+        // // }
+
+        // //  &.arrow {
+
+        // //}
+
+        // &.keyword {
+        //     color: @token-keyword;
+        // }
+
+        // &.comment, &.prolog, &.doctype, &.cdata {
+        //     color: @token-comment;
+        //     font-style: italic;
+        // }
+
+        // &.string {
+        //     color: @token-string;
+        // }
+
+        // &.number {
+        //     color: @token-number;
+        // }
+
+        // &.unit {
+        //     color: @token-number;
+        // }
+
+
+        // &.operator {
+        //     color: #B2B2B2;
+        //     // background-color: transparent;
+        // }
+
+        // &.punctuation {
+        //     color: @token-punctuation;
+        // }
+
+        // &.color {
+        //     color: @token-string;
+        // }
+
+
+        // &.class-name {
+        //     color: @token-class;
+        // }
         
+        // &.generic.class-name {
+        //     color: #B8D7A3
+        // }
+
+        // &.property-access{
+        //     // color: @token-string;
+        //     color: @token-property;
+        // }
+
+        // &.method, &.function {
+        //     // @token-method: #DD4A68;
+        //     // color: @token-method;
+        //     color: #D3FA7E;
+        // }
+        
+
+        // // &.function {
+        // //     color: #46AF99;
+        // // }
+
+        // // &.variable {
+        // //     color: #4EC9B0;
+        // // }
+
+
+        // //  &.keyword, 
+        // // &.control-flow {
+        // //     @token-controlflow: #DD4A68;
+        // //     color: @token-controlflow;
+        // // }
+
+
+
+        // // &.dom {
+        // //     @token-dom: #e90;
+        // //     color: @token-dom;
+        // // }
+
+     
+        // &.property {
+        //     color: @token-property;
+        // }
+
+        // &.selector {
+        //     color: @token-selector;
+        // }
+
+        // &.boolean {
+        //     color: @token-boolean;
+        // }
+
+
+        // &.attr-name {
+        //     color: @token-attrname;
+        // }
+
+        // &.attr-value {
+        //     color: @token-attrvalue;
+        // }
+
+
+        // // &.url {
+        // //   color: @token-keyword;
+        // // }
+
      
 
     }
@@ -613,7 +977,7 @@ html body[for="html-export"]:not([data-presentation-mode]) {
             width: calc(100% - @toc-expanded-width);
         }
 
-        .md-sidebar-toc{
+        .md-sidebar-toc {
             position: fixed;
             top: 0;
             left: 0;
@@ -623,13 +987,7 @@ html body[for="html-export"]:not([data-presentation-mode]) {
             overflow-x: hidden;
     
             width: @toc-expanded-width;
-            background: linear-gradient(
-                to top,
-                rgba(red(@background-body), green(@background-body), blue(@background-body), 1) 0%,
-                rgba(red(@background-body) / 2, green(@background-body) / 2, blue(@background-body) / 2, 0.68) 10%,
-                rgba(red(@background-body) / 3, green(@background-body) / 3, blue(@background-body) / 3, 0.23) 50%, 
-                transparent
-              ) bottom @background-body no-repeat;
+            background: @toc-background;
             background-size: 100% 35px;
             animation: slide-in @toc-transition-in-time forwards !important;
             -webkit-animation: slide-in @toc-transition-in-time forwards !important;
@@ -839,7 +1197,7 @@ html body[for="html-export"]:not([data-presentation-mode]) {
     border-width: 0;
     outline: none;
     border-radius: 2px;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .6);
     
     // background-color: #2ecc71;
     background-color: darken(@background-general, 5%);
@@ -872,7 +1230,6 @@ html body[for="html-export"]:not([data-presentation-mode]) {
         transition-timing-function: ease-out;
     }
 }
-
 
 
 
