Updated light style

--- a/styles/light.less
+++ b/styles/light.less
@@ -25,10 +25,10 @@
 @token-selector:        #887243;
 @token-boolean:         @token-keyword;
 @token-class:           #36B58A;
-@token-method:          #D3FA7E;
-@token-function:        #D3FA7E;
+@token-method:          #46532A;
+@token-function:        #46532A;
 
-@token-attrname:       #C8C8C8;
+@token-attrname:       #848484;
 @token-attrvalue:      @token-property;
 
 // @code-expandless-icon: 'https://fonts.gstatic.com/s/i/materialicons/expand_less/v10/24px.svg';
