--- a/styles/dark.less
+++ b/styles/dark.less
@@ -26,8 +26,8 @@
 @token-boolean:         @token-keyword;
 @token-class:           #4EC9B0;
 @token-genericclass:    #B8D7A3;
-@token-method:          @general-font-color;
-@token-function:        @general-font-color;
+// @token-method:          @general-font-color;
+// @token-function:        @general-font-color;
 @token-method:          #FFFF9F;
 @token-function:        #FFFF9F;
 
