--- a/styles/light.less
+++ b/styles/light.less
@@ -26,10 +26,10 @@
 @token-boolean:         @token-keyword;
 @token-class:           #36B58A;
 @token-genericclass:    #9ea017;
-@token-method:          @general-font-color;
-@token-function:        @general-font-color;
-// @token-method:          #7c8b39;
-// @token-function:        #7c8b39;
+// @token-method:          @general-font-color;
+// @token-function:        @general-font-color;
+@token-method:          #7c8b39;
+@token-function:        #7c8b39;
 
 @token-attrname:       #848484;
 @token-attrvalue:      @token-property;
