--- a/styles/light.less
+++ b/styles/light.less
@@ -902,6 +902,13 @@ html body[for="html-export"]:not([data-presentation-mode]) {
     fill: @general-font-color !important;
 }
 
+.attributeBoxOdd {
+    fill: darken(@background-general, 2.5%) !important;
+}
+
+.attributeBoxEven {
+    fill: darken(@background-general, 2.5%) !important;
+}
 
 /*endregion Mermaid Diagram - Entity Diagram */
 
@@ -1337,6 +1344,143 @@ pre[data-role="codeBlock"] {
         // }
     }
 
+    &[class="language-scss"] {
+        
+        // &.class-name > .keyword {
+        //     color: #46AF99;
+        // }
+
+        // .token {
+        //     tab-size: 1 !important;
+        // }
+
+        //  &.arrow {
+
+        //}
+
+        .keyword {
+            color: @token-keyword;
+        }
+
+        .comment, .prolog, .doctype, .cdata {
+            color: @token-comment;
+            font-style: italic;
+        }
+
+        .string {
+            color: @token-string;
+        }
+
+        .number {
+            color: @token-number;
+        }
+
+        .unit {
+            color: @token-number;
+        }
+
+
+        .operator {
+            color: #B2B2B2;
+            // background-color: transparent;
+        }
+
+        .punctuation {
+            color: @token-punctuation;
+        }
+
+        .color {
+            // color: @token-string;
+            color: @general-font-color;
+
+            & > .function {
+                // @token-method: #DD4A68;
+                // color: @token-method;
+                color: @general-font-color;
+            }
+        }
+
+
+        // .class-name {
+        //     color: @token-class;
+        // }
+        
+        // .generic.class-name {
+        //     color: #B8D7A3
+        // }
+
+        
+
+        // .method {
+        //     // @token-method: #DD4A68;
+        //     // color: @token-method;
+        //     color: #D3FA7E;
+        // }
+
+        .function {
+            // @token-method: #DD4A68;
+            // color: @token-method;
+            color: @general-font-color;
+        }
+        
+        
+        .property-access{
+            // color: @token-string;
+            // color: @token-property;
+            color: @general-font-color;
+        }
+
+        // &.function {
+        //     color: #46AF99;
+        // }
+
+      
+        .variable {
+            // color: #4EC9B0;
+            color: @token-property;
+        }
+
+
+        //  &.keyword, 
+        // &.control-flow {
+        //     @token-controlflow: #DD4A68;
+        //     color: @token-controlflow;
+        // }
+
+
+
+        // &.dom {
+        //     @token-dom: #e90;
+        //     color: @token-dom;
+        // }
+
+        
+        .property {
+            color: @token-property;
+        }
+
+        .selector {
+            color: @token-selector;
+        }
+
+        .boolean {
+            color: @token-boolean;
+        }
+
+
+        .attr-name {
+            color: @token-attrname;
+        }
+
+        .attr-value {
+            color: @token-attrvalue;
+        }
+
+
+        // &.url {
+        //   color: @token-keyword;
+        // }
+    }
 
     &[class="language-less"] {
         
@@ -1653,7 +1797,6 @@ pre[data-role="codeBlock"] {
         //   color: @token-keyword;
         // }
     }
-
 
     &[class~="language-json"] {
             
