--- a/styles/dark.less
+++ b/styles/dark.less
@@ -872,6 +872,117 @@ html body[for="html-export"]:not([data-presentation-mode]) {
 
 /*region Mermaid Diagram */
 
+/*region Mermaid Diagram - Class Diagram */
+
+/*endregion Mermaid Diagram - Class Diagram */
+
+
+
+// .classGroup {
+//     & > a:nth-child(1) {
+//         color: red !important;
+//     }
+// }
+
+
+// g.classGroup text:nth-child(1) tspan:nth-child(2) {
+//     transform: translate(0px, 2%);
+// }
+
+// g.classGroup text:nth-child(1) tspan:nth-child(2) {
+//     transform: translate(0px, 2%);
+// }
+
+
+
+// .classText {
+//     tspan:nth-child(1) {
+//         transform: translate(0px, 1%);
+//     }
+
+//     transform: translate(0px, 2%);
+// }
+
+
+
+
+
+
+
+g.classGroup text {
+    font-size: @general-font-size !important;
+    fill: @general-font-color !important;
+    transform: translate(0px, 1%);
+
+    // padding-top: 30px !important;
+    // margin: 30px !important;
+    
+    // :not(svg) {
+    //     transform-origin: 20px 0px !important;
+    // }
+
+
+
+    // & > section:nth-child(2) {
+    //     dy: 12 !important;
+    //     attr(x): 2;
+    // }
+
+    //  dy
+
+    // ::before {
+    //     content: attr(x) !important;
+    //     font-size: 15px;
+    //     color: red;
+
+    // }
+
+    // text-align: left !important;
+
+    // tspan {
+    //     margin: 30px !important;
+    // }
+}
+
+
+
+// .classGroup .title{
+//     // margin: 5px !important;
+//     // padding: 5px !important;
+
+//     transform: translate(0px, 20%);
+// }
+
+// g.classGroup rect{
+//     padding: 20px !important;
+//     margin: 5px !important;
+// }
+g.classGroup line{
+    // fill: @general-font-color !important;
+    fill: red !important;
+}
+// .classLabel .box{
+    
+// }
+.classLabel .label{
+    font-size: @general-font-size !important;
+    fill: @general-font-color !important;
+}
+// composition {
+//     // fill: @general-font-color !important;
+//     fill: red !important;
+// }
+// aggregation {
+//     // fill: @general-font-color !important;
+//     fill: red !important;
+// }
+// dependency {
+//     // fill: @general-font-color !important;
+//     fill: red !important;
+// }
+
+
+
 /*region Mermaid Diagram - Entity Diagram */
 
 .entityBox {
